# mcqbot

./: .env  .gitignore  .pylintrc  Dockerfile.test-app  Dockerfile.tests  Explanation.md  README.md  __init__.py  app.Dockerfile  docker-compose.dev.yml  docker-compose.neo4j.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  pull_request_template.md  pyproject.toml  test-app.Dockerfile
.github/workflows/: cleanup.yml  docker.yml  workflow.yml
api/: main.py  models.py
api/data/: graph_database.py  mcq_graph.py  neo4j_graph.py  nx_graph.py  sample_graph.py
api/graph_databases/: nx_graph.py
api/graphs/: graph_database.py  mcq_graph.py  neo4j_graph.py  nx_graph.py
api/utils/: mcq_generator.py
app/: __init__.py  main.py  models.py
app/core/: fake_word_builder.py  fake_word_generator.py  mcq_builder.py  mcq_generator.py
app/data/: graph_database.py  mcq_graph.py  neo4j_connect.py  neo4j_graph.py  neurograph.py  nx_graph.py  sample_graph.py
app/graphs/: log_util.py  mcq_graph.py  neo4j_graph.py  nx_graph.py
app/utils/: fake_word_generator.py  log_util.py  mcq_generator.py
docker/: api.Dockerfile  app.Dockerfile  docker-compose.dev.yml  frontend.Dockerfile  tests.Dockerfile
frontend/: __init__.py  app.py
frontend/templates/: app.py  error.html  home.html
src/: main.py
tests/: __init__.py  conftest.py  test_basic.py  test_main.py  test_test.py  test_utils.py
tests/test_api/: test_main.py
tests/test_app/: test_fake_word_builder.py  test_fake_word_generator.py  test_main.py  test_mcq_generator.py  test_mcq_generator_with_neo4j.py  test_mcq_generator_with_nx.py
tests/test_app/test_utils/: test_fake_word_generator.py
tests/test_data/: test_mcq_graph.py  test_neurograph.py
tests/test_neo4j/: neo4j_connect.py  test_mcq_builder_neo4j.py  test_mcq_generator_with_neo4j.py  test_mcq_graph.py  test_neo4j.py  test_neo4j_graph.py  test_test.py
tests/test_nx/: test_mcq_builder_nx.py  test_mcq_generator_with_nx.py  test_nx_graph.py
tests/test_templates/: test_mcq_graph.py
tests/test_utils/: test_fake_word_generator.py  test_mcq_generator.py
