[tool.poetry]
name = "mcqbot"
version = "0.1.0"
description = "Multiple choice question generator"
authors = ["nickynw"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
httpx = "^0.23.3"
levenshtein = "^0.20.9"
pyphen = "^0.14.0"
numpy = "^1.24.2"
ratelimit = "^2.2.1"
slowapi = "^0.1.8"
pydantic = "^1.10.7"
networkx = "^3.1"
py2neo = "^2021.2.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"
isort = "^5.12.0"
blue = "^0.9.1"
mypy = "^1.2.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.code_audit.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"
isort = "^5.12.0"
blue = "^0.9.1"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
